tests/analyzer/errors/invalid_while.rv
fn main() {
    while 1 {}
    while "true" {}

    while true { break 5 }
}
